Fix HTML generated for block highlight

--- a/src/learning_zig/01-language-overview-1.html
+++ b/src/learning_zig/01-language-overview-1.html
@@ -451,7 +451,7 @@ pub fn main() void {
 
 	<p>which prints:</p>
 
-	{% highlight "text" %}
+	{% highlight text %}
 	struct{comptime year: comptime_int = 2023, comptime month: comptime_int = 8}
 	{% endhighlight %}
 
