zig init-exe/zig init-lib -> zig init

--- a/src/learning_zig/08-coding_in_zig.html
+++ b/src/learning_zig/08-coding_in_zig.html
@@ -511,7 +511,7 @@ test "dummy build test" {
 
 		<p>Now when you run <code>zig build test</code>, you should get a test failure. If you fix the test and run <code>zig build test</code> again, you won't get any output. By default, Zig's test runner only outputs on failure. Use <code>zig build test --summary all</code> if, like me, pass or fail, you always want a summary.</p>
 
-		<p>This is the minimal configuration you'll need to get up and running. But rest easy knowing that if you need to build it, Zig can probably handle it. Finally, you can, and probably should, use <code>zig init-exe</code> or <code>zig init-lib</code> within your project root to have Zig create a well-documented build.zig file for you.</p>
+		<p>This is the minimal configuration you'll need to get up and running. But rest easy knowing that if you need to build it, Zig can probably handle it. Finally, you can, and probably should, use <code>zig init</code> within your project root to have Zig create a well-documented build.zig file for you.</p>
 	</section>
 
 	<section>
