Link to Polish translation

--- a/src/learning_zig/00-index.html
+++ b/src/learning_zig/00-index.html
@@ -21,6 +21,7 @@ permalink: "/learning_zig/"
 			<li><a href="https://github.com/dee0xeed/learning-zig-rus/blob/main/src/ch01.md">Russian</a> - by dee0xeed
 			<li><a href="https://faultnote.github.io/posts/learning-zig/">Korean</a> - by faultnote
 			<li><a href="https://jkitajima.github.io/learning-zig-karlseguin/">Brazilian Portuguese</a> - by João Kitajima
+			<li><a href="https://rofrol.github.io/learning-zig-karlseguin/">Polish</a> - by Roman Frołow
 		</ol>
 	</section>
 
