02-language-overview-2.html: while can accept multiple statements

--- a/src/learning_zig/02-language-overview-2.html
+++ b/src/learning_zig/02-language-overview-2.html
@@ -164,7 +164,7 @@ while (i < src.len) {
 }
 {% endhighlight %}
 
-		<p>A <code>while</code> can have an <code>else</code> clause, which is executed when the condition is false. It also accepts a statement to execute after each iteration. This feature was commonly used prior to <code>for</code> supporting multiple sequences. The above can be written as:</p>
+		<p>A <code>while</code> can have an <code>else</code> clause, which is executed when the condition is false. It also accepts a statement to execute after each iteration. There can be multiple statements speparated with <code>;</code>. This feature was commonly used prior to <code>for</code> supporting multiple sequences. The above can be written as:</p>
 
 {% highlight zig %}
 var i: usize = 0;
