Fix typo in 03-style-guide.html

--- a/src/learning_zig/03-style-guide.html
+++ b/src/learning_zig/03-style-guide.html
@@ -82,7 +82,7 @@ fn read(stream: std.net.Stream) ![]const u8 {
 
 	<section>
 		<h2 tabindex=-1 id=naming><a href=#naming aria-hidden=true>Naming Convention</a></h2>
-		<p>Besides rules enforced by the compiler, you are, of course, free to follow whatever naming convention you prefer. But it does help to understand Zig's own naming convention since much of the code you'll interact with, from the standard library to third party libraries, makes us of it.</p>
+		<p>Besides rules enforced by the compiler, you are, of course, free to follow whatever naming convention you prefer. But it does help to understand Zig's own naming convention since much of the code you'll interact with, from the standard library to third party libraries, makes use of it.</p>
 
 		<p>Zig source code is indented with 4 spaces. I personally use a tab which is objectively better for accessibility.</p>
 
