update for zig changes to std.Random

--- a/src/learning_zig/06-heap_memory.html
+++ b/src/learning_zig/06-heap_memory.html
@@ -52,7 +52,7 @@ pub fn main() !void {
 fn getRandomCount() !u8 {
 	var seed: u64 = undefined;
 	try std.posix.getrandom(std.mem.asBytes(&seed));
-	var random = std.rand.DefaultPrng.init(seed);
+	var random = std.Random.DefaultPrng.init(seed);
 	return random.random().uintAtMost(u8, 5) + 5;
 }
 {% endhighlight %}
