need to add pub to call the method

--- a/src/learning_zig/01-language-overview-1.html
+++ b/src/learning_zig/01-language-overview-1.html
@@ -188,7 +188,7 @@ pub const User = struct {
 
 	pub const SUPER_POWER = 9000;
 
-	fn diagnose(user: User) void {
+	pub fn diagnose(user: User) void {
 		if (user.power >= SUPER_POWER) {
 			std.debug.print("it's over {d}!!!", .{SUPER_POWER});
 		}
