Fix code for windows 08-coding_in_zig.html
Fix error: expected type '[]u8', found '[]const u8' in std.mem.trimRight call

--- a/src/learning_zig/08-coding_in_zig.html
+++ b/src/learning_zig/08-coding_in_zig.html
@@ -152,7 +152,7 @@ pub fn main() !void {
 			if (builtin.os.tag == .windows) {
 				// In Windows lines are terminated by \r\n.
 				// We need to strip out the \r
-				name = std.mem.trimRight(u8, name, "\r");
+				name = @constCast(std.mem.trimRight(u8, name, "\r"));
 			}
 			if (name.len == 0) {
 				break;
@@ -272,7 +272,7 @@ pub fn main() !void {
 			if (builtin.os.tag == .windows) {
 				// In Windows lines are terminated by \r\n.
 				// We need to strip out the \r
-				name = std.mem.trimRight(u8, name, "\r");
+				name = @constCast(std.mem.trimRight(u8, name, "\r"));
 			}
 			if (name.len == 0) {
 				break;
