add Ukrainian translation link

--- a/src/learning_zig/00-index.html
+++ b/src/learning_zig/00-index.html
@@ -22,6 +22,7 @@ permalink: "/learning_zig/"
 			<li><a href="https://faultnote.github.io/posts/learning-zig/">Korean</a> - by faultnote
 			<li><a href="https://jkitajima.github.io/learning-zig-karlseguin/">Brazilian Portuguese</a> - by João Kitajima
 			<li><a href="https://rofrol.github.io/learning-zig-karlseguin/">Polish</a> - by Roman Frołow
+			<li><a href="https://sonicfromnewyoke.github.io/learning-zig-ukr/">Ukrainian</a> - by Sonic
 		</ol>
 	</section>
 
