--- a/src/learning_zig/00-index.html
+++ b/src/learning_zig/00-index.html
@@ -5,7 +5,6 @@ title: "Learning Zig"
 tags: [zig]
 permalink: "/learning_zig/"
 ---
-<a href=/ style="background:#444;color:#fff;padding:10px;text-decoration:none;display: inline-block;position: absolute;top: 0;right: 0">home</a>
 <article>
 	<section style="border:0">
 		<h1 id=learning_zig tabindex=-1><a href=#learning_zig aria-hidden-true>Learning Zig</a></h1>
@@ -46,7 +45,7 @@ permalink: "/learning_zig/"
 		<h2 tabindex=-1 id=install><a href=#install aria-hidden=true>Installing Zig</a></h2>
 		<p>Zig's <a href="https://ziglang.org/download/">download page</a> includes pre-compiled binaries for common platforms. On this page you'll find binaries for the latest development release as well as for major releases. The latest release, which this guide tracks, can be found at the top of the page.</p>
 
-		<p>For my computer, I'll be downloading <i>zig-macos-aarch64-0.12.0-dev.2777+2176a73d6.tar.xz</i>. You might be on a different platform or a more recent release. After expanding the archive you should have a <code>zig</code> binary (in addition to other things) which you'll want to alias, or add to your path; whatever flow you're used to.</p>
+		<p>After expanding the archive you should have a <code>zig</code> binary (in addition to other things) which you'll want to alias, or add to your path; whatever flow you're used to.</p>
 
 		<p>You should now be able to run <code>zig zen</code> and <code>zig version</code> to test your setup.</p>
 	</section>
